Disabled buttons logic changed
Disable "Avslå" button and include Status field in disableing logic. Also add requested and granted amount in modal request

--- a/force-app/main/default/lwc/applicationTree/applicationTree.html
+++ b/force-app/main/default/lwc/applicationTree/applicationTree.html
@@ -9,7 +9,7 @@
             <lightning-button variant="brand" label="Godkänn Ansökan" title="Bevilja ansökan" onclick={handleApproveClick} class="slds-button slds-button__brand" disabled={disabledButton}></lightning-button>
             <br/>
             <br/>
-            <lightning-button variant="destructive" class="slds-button slds-button__destructive" onclick={handleReject} label="Avslå" title="Avslå"></lightning-button>
+            <lightning-button variant="destructive" class="slds-button slds-button__destructive" onclick={handleReject} label="Avslå" title="Avslå"  disabled={disabledButton}></lightning-button>
         </div>
         
         <div slot="title" class="slds-grid slds-grid_align-spread">
