Added fields in Regigera-form
Added "kommentar" and "kostnad för majblomman" fields in form

--- a/force-app/main/default/lwc/bidragsraderModal/bidragsraderModal.html
+++ b/force-app/main/default/lwc/bidragsraderModal/bidragsraderModal.html
@@ -35,6 +35,10 @@
                     </lightning-input-field>
                     <lightning-input-field field-name="Annat_Beskrivning__c">
                     </lightning-input-field>
+                    <lightning-input-field field-name="Kostnad_majblomman_kr__c">
+                    </lightning-input-field>
+                    <lightning-input-field field-name="Kommentar__c">
+                    </lightning-input-field>
                     <!-- Add more fields as needed -->
 
                     <div class="slds-m-top_large slds-m-left_x-small">
