--- a/force-app/main/default/lwc/application/application.html
+++ b/force-app/main/default/lwc/application/application.html
@@ -184,7 +184,7 @@
                                             <td class="small-cell">
                                                 <lightning-input if:true={isApply} label="Personnummer/Samordningsnummer/LMA-nummer" type="text" name="ssn" data-id={row.id} value={row.ssn}
                                                                  pattern="^(\d{10}|(\d{2}-\d{8})|(\d{2}-\d{6}\/\d{1}))$" field-level-help="Samordningsnumret består av 10 siffror, där talet 60 är adderat till födelsedatumet. Om personen exempelvis är född den 1 januari 1970 så är samordningsnumret 700161XXXX. Exempel på LMA-nummer 20-000001/1, och det kan skrivas med eller utan skiljetecken."
-                                                                 message-when-pattern-mismatch="Samordningsnumret består av 10 siffror, där talet 60 är adderat till födelsedatumet. Om personen exempelvis är född den 1 januari 1970 så är samordningsnumret 700161XXXX. Exempel på LMA-nummer 20-000001/1, och det kan skrivas med eller utan skiljetecken."
+                                                                 message-when-pattern-mismatch="Felaktigt format. Se (i) ikonen ovan för en beskrivning av formatet."
                                                                  read-only={isCertify}
                                                                  onchange={handleInputChange}></lightning-input>
 <!--                                                <div if:true={isCertify}>-->
