[UAT-5] Add input validation for 'amount' field in application form
A pattern restriction is added to the 'amount' field on the application form. This ensures the input is a number greater than zero. An appropriate error message is displayed when the entered data does not match the required pattern.

--- a/force-app/main/default/lwc/application/application.html
+++ b/force-app/main/default/lwc/application/application.html
@@ -310,7 +310,7 @@
                                             </td>
                                             <td class="small-cell">
                                                 <lightning-input if:true={isApply} label="Skriv totalt belopp ex. 3000" type="number" name="amount" required="true"
-                                                                 data-id={row.id} value={row.amount}
+                                                                 data-id={row.id} value={row.amount} pattern="[1-9]+[0-9]*" message-when-pattern-mismatch="Endast siffor. Måste vara > 0"
                                                                  onchange={handleSecondInputChange}></lightning-input>
                                                 <div if:true={isCertify}>
                                                     <label for="xcAmount" class="slds-form-element__label slds-no-flex">
