[UAT-3] Add bold text CSS class and apply it to the element
Added a new CSS class for bold text styling in application.css and applied this class to an HTML label element in the application.html file. This update is intended to enhance readability by making certain sections of text stand out more prominently.

--- a/force-app/main/default/lwc/application/application.html
+++ b/force-app/main/default/lwc/application/application.html
@@ -987,7 +987,7 @@
                     <div style="border-bottom: 2px dashed darkgray;"
                          class="main-card">
                         <label class="slds-m-bottom_medium slds-show_inline-block">{labels.INTYG_EPOST_INFO}</label>
-                        <label class="slds-m-bottom_medium slds-show_inline-block"><span data-id="filesInfo" if:true={isApply}>{filesInfo}</span></label>
+                        <label class="slds-m-bottom_medium slds-show_inline-block"><span class="bold-text" data-id="filesInfo" if:true={isApply}>{filesInfo}</span></label>
                         <lightning-layout multiple-rows="true" horizontal-align="spread" vertical-align="top">
                             <lightning-layout-item size="12" medium-device-size="5"  padding="horizontal-small">
                                 <lightning-input
