[UAT-10] Update validation rules for XC_Postnummer__c field
This commit introduces improved validation rules for the XC_Postnummer__c field. Specifically, it sets the minimum and maximum length to 5, and enforces a pattern that allows only digits. It also provides a descriptive error message for pattern mismatches.

--- a/force-app/main/default/lwc/application/application.html
+++ b/force-app/main/default/lwc/application/application.html
@@ -571,6 +571,10 @@
                                 <lightning-input if:true={isApply}
                                         message-when-value-missing="Fyll i detta fält"
                                         data-validity-check="true"
+                                        min-length="5"
+                                        max-length="5"
+                                        pattern="^\d{5}$"
+                                        message-when-pattern-mismatch="Postnummer måste vara 5 siffror"
                                         required={isApply}
                                         read-only={isCertify}
                                         data-field="XC_Postnummer__c"
