UAT fixes in applicationTree and multiApplicationTree
added bankinformation for validation and to send to bidragsraderModal to show warning text, removed links, renamed action and added validation as requested in UAT feedback

--- a/force-app/main/default/lwc/multiApplicationTree/multiApplicationTree.html
+++ b/force-app/main/default/lwc/multiApplicationTree/multiApplicationTree.html
@@ -46,7 +46,7 @@
             >
             </lightning-tree-grid>
 
-            <c-bidragsrader-modal record-id={recId} is-open={isModalOpen} onclose={closeModal}></c-bidragsrader-modal>
+            <c-bidragsrader-modal record-id={recId} is-open={isModalOpen} bank-information={hasBankInfo} onclose={closeModal}></c-bidragsrader-modal>
 
             <c-screen-flow flow-api-name={childRecordFlowApiName} onclose={handleFlowSubmit}></c-screen-flow>
         </div>
